--- a/Client/Layout/NavMenu.razor
+++ b/Client/Layout/NavMenu.razor
@@ -24,6 +24,22 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3"></div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="features">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Features
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="login">
+                <span class="bi bi-box-arrow-in-right" aria-hidden="true"></span> Login
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="logout">
+                <span class="bi bi-box-arrow-right" aria-hidden="true"></span> Logout
+            </NavLink>
+        </div>
     </nav>
 </div>
 
